made the skaleton

--- a/wp-cli-rest-command/.phpcs.xml.dist
+++ b/wp-cli-rest-command/.phpcs.xml.dist
@@ -1,47 +1,89 @@
-<?xml version="1.0"?>
-<ruleset name="WordPress Coding Standards based custom ruleset for your plugin">
-	<description>Generally-applicable sniffs for WordPress plugins.</description>
+<?php
+/**
+ * Autoloader file for plugin.
+ *
+ * @package project-name-featuers
+ */
 
-	<!-- What to scan -->
-	<file>.</file>
-	<exclude-pattern>/vendor/</exclude-pattern>
-	<exclude-pattern>/node_modules/</exclude-pattern>
+namespace Project_Name\Features\Inc\Helpers;
 
-	<!-- How to scan -->
-	<!-- Usage instructions: https://github.com/squizlabs/PHP_CodeSniffer/wiki/Usage -->
-	<!-- Annotated ruleset: https://github.com/squizlabs/PHP_CodeSniffer/wiki/Annotated-ruleset.xml -->
-	<arg value="sp"/> <!-- Show sniff and progress -->
-	<arg name="basepath" value="./"/><!-- Strip the file paths down to the relevant bit -->
-	<arg name="colors"/>
-	<arg name="extensions" value="php"/>
-	<arg name="parallel" value="8"/><!-- Enables parallel processing when available for faster results. -->
+/**
+ * Auto loader function.
+ *
+ * @param string $resource Source namespace.
+ *
+ * @return void
+ */
+function autoloader( $resource = '' ) {
 
-	<!-- Rules: Check PHP version compatibility -->
-	<!-- https://github.com/PHPCompatibility/PHPCompatibility#sniffing-your-code-for-compatibility-with-specific-php-versions -->
-	<config name="testVersion" value="5.6-"/>
-	<!-- https://github.com/PHPCompatibility/PHPCompatibilityWP -->
-	<rule ref="PHPCompatibilityWP"/>
+	$resource_path  = false;
+	$namespace_root = 'Project_Name\Features\\';
+	$resource       = trim( $resource, '\\' );
 
-	<!-- Rules: WordPress Coding Standards -->
-	<!-- https://github.com/WordPress-Coding-Standards/WordPress-Coding-Standards -->
-	<!-- https://github.com/WordPress-Coding-Standards/WordPress-Coding-Standards/wiki/Customizable-sniff-properties -->
-	<config name="minimum_supported_wp_version" value="4.6"/>
-	<rule ref="WordPress"/>
-	<rule ref="WordPress.NamingConventions.PrefixAllGlobals">
-		<properties>
-			<!-- Value: replace the function, class, and variable prefixes used. Separate multiple prefixes with a comma. -->
-			<property name="prefixes" type="array" value="my-plugin"/>
-		</properties>
-	</rule>
-	<rule ref="WordPress.WP.I18n">
-		<properties>
-			<!-- Value: replace the text domain used. -->
-			<property name="text_domain" type="array" value="my-plugin"/>
-		</properties>
-	</rule>
-	<rule ref="WordPress.WhiteSpace.ControlStructureSpacing">
-		<properties>
-			<property name="blank_line_check" value="true"/>
-		</properties>
-	</rule>
-</ruleset>
+	if ( empty( $resource ) || strpos( $resource, '\\' ) === false || strpos( $resource, $namespace_root ) !== 0 ) {
+		// Not our namespace, bail out.
+		return;
+	}
+
+	// Remove our root namespace.
+	$resource = str_replace( $namespace_root, '', $resource );
+
+	$path = explode(
+		'\\',
+		str_replace( '_', '-', strtolower( $resource ) )
+	);
+
+	/**
+	 * Time to determine which type of resource path it is,
+	 * so that we can deduce the correct file path for it.
+	 */
+	if ( empty( $path[0] ) || empty( $path[1] ) ) {
+		return;
+	}
+
+	$directory = '';
+	$file_name = '';
+
+	if ( 'inc' === $path[0] ) {
+
+		switch ( $path[1] ) {
+			case 'traits':
+				$directory = 'traits';
+				$file_name = sprintf( 'trait-%s', trim( strtolower( $path[2] ) ) );
+				break;
+
+			case 'post-types':
+			case 'taxonomies':
+			case 'blocks':
+			case 'meta-boxes':
+			case 'widgets':
+			case 'plugin-configs': // phpcs:ignore PSR2.ControlStructures.SwitchDeclaration.TerminatingComment
+				/**
+				 * If there is class name provided for specific directory then load that.
+				 * otherwise find in inc/ directory.
+				 */
+				if ( ! empty( $path[2] ) ) {
+					$directory = sprintf( 'classes/%s', $path[1] );
+					$file_name = sprintf( 'class-%s', trim( strtolower( $path[2] ) ) );
+					break;
+				}
+			default:
+				$directory = 'classes';
+				$file_name = sprintf( 'class-%s', trim( strtolower( $path[1] ) ) );
+				break;
+		}
+
+		$resource_path = sprintf( '%s/inc/%s/%s.php', untrailingslashit( PROJECT_NAME_FEATURES_PATH ), $directory, $file_name );
+
+	}
+
+	$resource_path_valid = validate_file( $resource_path );
+	// For Windows platform, validate_file returns 2 so we've added this condition as well.
+	if ( ! empty( $resource_path ) && file_exists( $resource_path ) && ( 0 === $resource_path_valid || 2 === $resource_path_valid ) ) {
+		// We are already making sure that the file exists and it's valid.
+		require_once( $resource_path ); // phpcs:ignore
+	}
+
+}
+
+spl_autoload_register( '\Project_Name\Features\Inc\Helpers\autoloader' );
